fix(media-backend) media file endpoints and docs are changed back to /file instead of /fileS
